@@ -12,6 +12,9 @@ v1.06: <<RELEASE DATE HERE>>
 ----------------------------
  - Updated maps to reflect transfers at 19th St/Oakland.
  - Updated graphics for trains which terminate at North Concord.
+ - Remove routes between SF and South Oakland which required a transfer at
+   12th St (i.e., between the Red and Orange trains) which are not listed
+   on BART's website.
 
 v1.05:  September 13, 2010
 --------------------------
